--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "toggle"
   ],
   "author": "Shridhar Deshmukh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-copy": "^1.1.0",
+    "gulp-inline": "^0.1.3",
+    "gulp-minify-css": "^1.2.4"
+  }
 }
