--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "wc-toggle",
+  "version": "0.1.0",
   "description": "A toggle web component to toggle between two values",
   "main": "wc-toggle.html",
   "authors": [
